--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,9 @@
 /*top: to account for fixed header overlay*/
 
 /*GENERAL STYLING*/
-
+a {
+  color: skyblue;
+}
 h1{
   color: black;
   font-size: 32px;
@@ -67,27 +69,94 @@ button {
 
 .secondimage{
   display: inline-block;
-  width: 100%;
+  padding: 32px 0 0 24px;
+  align-items: center;
+}
+.bannertwo{
+  width: 40%;
 
 }
-.mainimage{
-  display: flex;
+.bannertwo img{
+  width: 35%;
+  height: auto;
+}
+.bannertwo h3{
+  font-size: 3rem;
+  font-weight: bold;
+}
+.bannertwo p{
+  font-size: 2rem;
+  padding: 8px 0;
+}
+.bannertwo a{
+  font-size: 2rem;
+}
+.bannertwo h3 p{
+  width: 65%;
+}
+.secondimage img {
   width: 60%;
 }
-.threeimages{
-  display: inline-block;
-  flex-direction: column;
 
+/*BANNER TWO-PART 2*/
+
+.practicing h2{
+  font-size: 3rem;
+  font-weight: bold;
 }
-.subimages{
-  display: flex;
+.practicing a{
+  font-size: 2rem;
 }
+.practicing p{
+  font-size: 2rem;
+}
+.practicing{
+  width: 60%;
+}
+.bottomhalf{
+  background-color: gray;
+  width: 40%;
+}
+.bottomhalf img{
+  height: auto;
+  width: 35%;
+}
+.bottomhalf h3{
+  font-size: 3rem;
+  font-weight: bold;
+}
+.bottomhalf a{
+  font-size: 2rem;
+}
+.bottomhalf p{
+  font-size: 2rem;
+}
+
 /*IMAGE GRID/FLEXCONTAINER*/
 
 .imagegrid{
   display: flex;
   padding: 32px 72px;
   background-color: gray;
+  justify-content: space-between;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.imagegrid img {
+  height: auto;
+  width: 35%;
+}
+
+.imagegrid h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  background-color: white;
+}
+
+.imagegrid p {
+  font-size: 2rem;
+  background-color: white;
 }
 
 /*VIDEO BANNER/FLEXCONTAINER*/
@@ -95,9 +164,25 @@ button {
 .videobanner{
   display: flex;
   width: 100%;
+  padding: 0 0 32px 24px;
 }
 video{
   width: 60%;
 }
 
+.videotitle h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 32px 0;
+}
+
 /*FOOTER*/
+
+footer .Colmar {
+  display: flex;
+  padding: 16px 0 32px 24px;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  border-top: 1px solid gray;
+}
