--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -135,27 +135,44 @@ button {
 /*IMAGE GRID/FLEXCONTAINER*/
 
 .imagegrid{
-  display: flex;
-  padding: 32px 72px;
+  display: inline-flex;
+  justify-content: center;
+}
+
+.grid-container{
+  display: inline-flex;
   background-color: gray;
   justify-content: space-between;
-  text-align: center;
-  flex-wrap: wrap;
 }
 
-.imagegrid img {
+.imageclass {
   height: auto;
-  width: 35%;
+  margin: 32px 72px 0 72px;
 }
 
-.imagegrid h2 {
+.imageheader {
   font-size: 3rem;
   font-weight: bold;
+  height: auto;
+  text-align: left;
+  margin: 0 72px 0 72px;
   background-color: white;
 }
 
-.imagegrid p {
+.image-p {
+  font-size: 1.7rem;
+  height: auto;
+  text-align: left;
+  margin: 0 72px 32px 72px;
+  padding-bottom: 24px;
+  background-color: white;
+}
+
+.image-courses {
   font-size: 2rem;
+  height: auto;
+  text-align: left;
+  margin: 0 72px 0 72px;
   background-color: white;
 }
 
@@ -165,12 +182,16 @@ button {
   display: flex;
   padding: 0 0 32px 24px;
 }
-
+.videoflexcont-item{
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+  flex-direction: column;
+}
 .videobanner img{
   width: 35%;
   height: auto;
   padding: 16px;
-  background-color: gray;
 }
 
 video{
@@ -185,23 +206,29 @@ video{
   padding: 32px 0;
 }
 
-.Reimagine h3, .Now h3, .Fisma h3{
+.Reimagine h3, .Now-cap h3, .Fisma-cap h3{
   font-size: 3rem;
   font-weight: bold;
 }
 
-.Reimagine p, .Now p, .Fisma p{
+.Reimagine p, .Now-cap p, .Fisma-cap p{
   font-size: 2rem;
 }
 
-.Fisma {
-
+.Fisma-img {
+  background-color: gray;
 }
 
-.Now {
+.Now-img {
 
 }
-
+.Fisma-cap {
+  background-color: gray;
+  width: 65%;
+}
+.Now-cap {
+  width: 65%;
+}
 .Reimagine{
   display: flex;
   padding: 0 24px 32px 24px;
