--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 /*MEDIA QUERIES-DESKTOP*/
 
 @media only screen and (min-width: 1024px){
-  .header2, .videotitle2, .videobanner2, .videosize2 {
+  .header2, .videotitle2, .videobanner2, .videosize2, .imageheader2, .orientation-cap2, .campus-cap2, .guest-cap2, .bannerone2, .firstimage2 {
     display: none;
   }
 }
@@ -9,10 +9,12 @@
 /*MEDIA QUERIES-MOBILE PHONE*/
 
 @media only screen and (max-width: 470px){
-  .header-img, .title, .title2, .header-nav, .secondimage img, .practicing h2, .practicing p, .imageclass, .image-courses, .image-p, .Fisma-img, .Fisma-cap, .Now-img, .Now-cap, .Reimagine h3, .Reimagine p, .Terms, .videoflexcont-item, .videotitle, .videobanner, .videosize, .imageheader {
+  .header-img, .title, .title2, .header-nav, .secondimage img, .practicing h2, .practicing p, .imageclass, .image-courses, .image-p, .Fisma-img, .Fisma-cap, .Now-img, .Now-cap, .Reimagine h3, .Reimagine p, .Terms, .videoflexcont-item, .videotitle, .videobanner, .videosize, .imageheader, .orientation-cap, .campus-cap, .guest-cap,  .campus-container {
     display: none;
   }
-
+  .firstimage1, .bannerone, .guest-image img, .Campus-image, .button1 {
+    display: none;
+  }
   .header2{
     display: flex;
     height: 64px;
@@ -20,20 +22,6 @@
   }
   .header2 img{
     padding-bottom: 32px;
-  }
-  .firstimage{
-    display: flex;
-    background-color: gray;
-    padding: 32px 24px;
-
-  }
-
-  .firstimage img{
-    width: 470px;
-  }
-
-  .firstimage .bannerone{
-    padding-left: 24px;
   }
   .videobanner2{
     display: flex;
@@ -70,6 +58,48 @@
     margin-top: 32px;
     padding: 16px 16px 24px 16px;
   }
+  .orientation-cap2 h3, .campus-cap2 h3, .guest-cap2 h3 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    padding-bottom: 8px;
+    padding-left: 50px;
+  }
+  .orientation-cap2 p, .campus-cap2 p, .guest-cap2 p {
+    font-size: 1.8rem;
+    padding-bottom: 8px;
+    padding-left: 50px;
+  }
+  .orientation-cap2 a, .campus-cap2 a, .guest-cap2 a {
+    font-size: 2rem;
+    color: skyblue;
+    padding-left: 50px;
+  }
+  .bannerone2 p{
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 0 16px 24px 16px;
+  }
+  .bannerone2 h1{
+    font-size: 3.5rem;
+    font-weight: bold;
+    padding: 32px 16px;
+  }
+  .button2 {
+      background-color: gray;
+      border: none;
+      color: white;
+      margin: 0 16px 32px 0;
+      text-align: center;
+      font-size: 1.5rem;
+      cursor: pointer;
+  }
+  .firstimage2{
+    align-items: center;
+  }
+.firstimage2 img {
+  width: 470px;
+  height: auto;
+}
 }
 
 /*DESKTOP*/
