--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,7 @@
 /*MEDIA QUERIES-DESKTOP*/
 
 @media only screen and (min-width: 1024px){
-  .header2, .videotitle2, .videobanner2, .videosize2, .imageheader2, .orientation-cap2, .campus-cap2, .guest-cap2, .bannerone2, .firstimage2, .bannertwo2 {
+  .header2, .videotitle2, .videobanner2, .videosize2, .imageheader2, .orientation-cap2, .campus-cap2, .guest-cap2, .bannerone2, .firstimage2, .bannertwo2, .Colmar2, .Terms2, .start-learning2 {
     display: none;
   }
 }
@@ -9,10 +9,10 @@
 /*MEDIA QUERIES-MOBILE PHONE*/
 
 @media only screen and (max-width: 470px){
-  .header-img, .title, .title2, .header-nav, .secondimage img , .orientation-container , .practicing h2, .practicing p, .imageclass, .image-courses, .image-p, .Fisma-img, .Fisma-cap, .Now-img, .Now-cap, .Reimagine h3, .Reimagine p, .Terms, .videoflexcont-item, .videotitle, .videobanner, .videosize, .imageheader , .orientation-cap , .campus-cap , .guest-cap ,  .campus-container {
+  .header-img, .title, .title2, .header-nav, .secondimage img , .banner-two-containers , .practicing h2, .practicing p, .imageclass, .image-courses, .image-p, .Fisma-img, .Fisma-cap, .Now-img, .Now-cap, .Reimagine h3, .Reimagine p, .Terms, .videoflexcont-item, .videotitle, .videobanner, .videosize, .imageheader , .orientation-cap , .campus-cap , .guest-cap {
     display: none;
   }
-  .firstimage1 , .bannerone , .guest-image img , .Campus-image , .button1 , .bannertwo , .secondimage , .orientation-container , .orientation-image , .secondhalf , .practicing , .guest-container , .guest-image {
+  .banner-one , .bannerone , .guest-image img , .Campus-image , .button1 , .bannertwo , .secondimage , .orientation-image , .banner-two-guest , .guest-container , .guest-image, .footer , .Terms, .start-learning1 {
     display: none;
   }
   .header2{
@@ -37,10 +37,6 @@
     text-align: center;
     padding: 32px 0 16px 0;
   }
-  .Colmar {
-    padding: 16px 0;
-    font-size: .5rem;
-  }
   .imageheader2 {
     font-size: 2rem;
     font-weight: bold;
@@ -50,7 +46,7 @@
     padding: 16px 16px 24px 16px;
     background-color: gray;
   }
-  .start-learning {
+  .start-learning2 {
     font-size: 3rem;
     font-weight: bold;
     height: auto;
@@ -75,6 +71,9 @@
     padding-left: 16px;
     margin-bottom: 32px;
   }
+  .bannerone2 {
+    background-color: gray;
+  }
   .bannerone2 p{
     font-size: 2rem;
     font-weight: bold;
@@ -86,7 +85,7 @@
     padding: 32px 16px;
   }
   .button2 {
-      background-color: gray;
+      background-color: black;
       border: none;
       color: white;
       margin: 0 16px 32px 0;
@@ -96,6 +95,7 @@
   }
   .firstimage2{
     align-items: center;
+    background-color: gray;
   }
 .firstimage2 img {
   width: 470px;
@@ -106,6 +106,11 @@
   max-width: 420px;
   margin-top: 64px;
 }
+.Colmar2 {
+  padding: 16px 0;
+  font-size: 1rem;
+}
+
 }
 
 /*DESKTOP*/
@@ -149,18 +154,18 @@ nav a{
 
 /*BANNER ONE/FLEXCONTAINER*/
 
-.firstimage{
+.firstimage1{
   display: flex;
   background-color: gray;
   padding: 32px 24px;
   align-items: center;
 }
 
-.firstimage img{
+.firstimage1 img{
   width: 60%;
 }
 
-.firstimage .bannerone{
+.firstimage1 .bannerone{
   padding-left: 24px;
 }
 
@@ -315,6 +320,15 @@ button {
 }
 
 /*IMAGE GRID/FLEXCONTAINER*/
+
+.start-learning1 {
+  font-size: 3rem;
+  font-weight: bold;
+  height: auto;
+  text-align: center;
+  margin-top: 32px;
+  padding: 16px 16px 24px 16px;
+}
 
 .imagegrid{
   display: inline-flex;
