--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,6 +81,9 @@
     font-style: italic;
     font-family: 'Crimson Text', serif;
   }
+  .orientation-cap2 a, .campus-cap2 a, .guest-cap2 a :active{
+    color: rgb(255, 30, 127);
+  }
   .bannerone2 {
     background-color: silver;
   }
@@ -97,8 +100,11 @@
     color: teal;
     font-family: 'Muli', 'Fira Sans', sans-serif;
   }
+  .bannerone2 h1:hover{
+    color: orange;
+  }
   .button2 {
-      background-color: black;
+      background-color: rgba(255, 0, 0, 0.5);
       border: none;
       color: white;
       margin: 0 16px 32px 0;
@@ -106,6 +112,11 @@
       font-size: 1.5rem;
       cursor: pointer;
       border-radius: 7.5px;
+      transition-property: background-color;
+  }
+  .button2:hover{
+    background-color: Navy;
+    transition-duration: 5s;
   }
   .firstimage2{
     align-items: center;
@@ -160,7 +171,9 @@ nav a{
   font-size: 1.5rem;
   font-family: 'Crimson Text', serif;
 }
-
+nav a:nth-child(2n+0){
+  color: rgb(55, 130, 127);
+}
 .title{
   height: 32px;
   font-size: 2rem;
@@ -212,11 +225,14 @@ nav a{
   color: teal;
   font-family: 'Muli', 'Fira Sans', sans-serif;
 }
+.bannerone h1:hover{
+  color: orange;
+}
 
 /*BANNER ONE-BUTTON*/
 
 button {
-    background-color: black;
+    background-color: rgba(255, 0, 0, 0.5);
     border: none;
     color: white;
     padding: 8px 0;
@@ -225,6 +241,11 @@ button {
     width: 400px;
     cursor: pointer;
     border-radius: 7.5px;
+    transition-property: background-color;
+}
+button:hover{
+  background-color: Navy;
+  transition-duration: 5s;
 }
 
 /*BANNER TWO/FLEXCONTAINER*/
@@ -252,7 +273,15 @@ button {
   font-style: italic;
   font-family: 'Crimson Text', serif;
 }
-
+.orientation-cap a:active{
+  color: rgb(255, 30, 127);
+}
+.campus-cap a:active{
+  color: rgb(255, 30, 127);
+}
+.guest-cap a:active{
+  color: rgb(255, 30, 127);
+}
 .orientation-image {
   width: 35%;
   height: auto;
@@ -516,4 +545,7 @@ footer .Terms {
   color: rgba(255, 0, 0, 0.5);
   text-decoration: underline;
   font-family: 'Crimson Text', serif;
+}
+footer .Terms:active{
+  color: rgb(255, 30, 127);
 }
